# propp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  example.cpp
include/propp/: Property.hpp
